fixed alignment issues with portfolio titles

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,11 +81,16 @@ h4 {
 	border-bottom: 2px solid #ddd;
 }
 
+#content {
+	margin-bottom: 20px;
+}
+
 section {
 	background-color: white;
 	border: 1px solid #ddd;
 	padding: 0px 30px 30px 30px;
 	margin-bottom: 20px;
+	margin-top: 20px;
 }
 
 #main_section p {
@@ -130,7 +135,7 @@ section {
 }
 
 .project-title {
-	background-color: rgba(74, 170, 165, .9);
+	background-color: rgba(74, 170, 165, 1);
 	text-shadow: 1px 1px #000;
 	position: absolute;
 	display: flex;
@@ -183,6 +188,7 @@ footer p {
 	}
 }
 
+/* WIDTH OF 991px or SMALLER */
 @media only screen and (max-width: 991px) {
 	.portfolio-image:nth-child(2) {
 		padding-left: 30px;
@@ -193,11 +199,11 @@ footer p {
 	}
 
 	.portfolio-image:nth-child(2) div {
-		padding-left: 30px;
+		/*padding-left: 30px;*/
 	}
 
 	.portfolio-image:nth-child(1) div {
-		padding-right: 30px;
+		/*padding-right: 30px;*/
 	}
 }
 
@@ -219,11 +225,13 @@ footer p {
 	}
 
 	.portfolio-image:nth-child(2) div {
+		padding-left: 0px;
 		margin-left: 0px;
 		width: 100%;
 	}
 
 	.portfolio-image:nth-child(1) div {
+		padding-right: 0px;
 		margin-right: 0px;
 		width: 100%;
 	}
